--- a/index.html
+++ b/index.html
@@ -3,12 +3,18 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=devicewidth, initial-scaled">
-    <title>Hello, World!</title>
+    <title>My Homepage</title>
     <!-- CSS Section -->
+
+    <link rel="stylesheet" href="Contents\css\bootstrap.min.css">
+    <link rel="stylesheet" href="Contents\css\bootstrap-theme.min.css">
+    <link rel="stylesheet" href="Contents\css\font-awesome.min.css">
     <link rel="stylesheet" href="">
 </head>
 <body>
     <h1>Helllo, World!</h1>
-
+    <!-- JavaScript Section -->
+    <script src="scripts\jquery-3.2.1.min.js"></script>
+    <script src="scripts\bootstrap.min.js"></script>
 </body>
 </html>
